Aligned new devices modal icons and fixed null device point issue
Former-commit-id: 62f3442ac882521fe3e759ba0354d82d121d4378

--- a/frontend/src/new_css/modal_css/Modal.css
+++ b/frontend/src/new_css/modal_css/Modal.css
@@ -64,7 +64,13 @@
           box-sizing: border-box;
 }
 
-.device > img {
+.device > div {
+  margin-top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+}
+
+.device > div > img {
   max-height: 50%;
   max-width: 50%;
 }
